Corrected documentation, list_motifs, and print_motifs

--- a/documentation/pymfinder_manual.tex
+++ b/documentation/pymfinder_manual.tex
@@ -165,7 +165,7 @@ $^2$Department of Physics, Chemistry, and Biology (IFM), Link\"{o}ping Universit
      		\item \textbf{network}: This can be a path to a network file, a list of interactions or a NetworkStats object. No default given (see the description in the article presenting the software).
 				\item \textbf{links}: Determines whether or not to calculate statistics for links as well as nodes. If \textbf{links=True}, link participation and roles will be calculated. Defaults to \textbf{links=False}.
 				\item \textbf{motifsize}: Size of motifs to be calculated. Defaults to \textbf{motifsize=3}. There are 13 possible three-species motifs for unipartite networks (Fig.~\ref{fig:3sp_unipartite}). For bipartite networks, there are only four three-species motifs (Fig.~\ref{bipartite_motifs}) and a larger motif size may be necessary. If one needs to analyze the motif structure or the motif participation of motifs $>3$ nodes in unipartite networks or $>6$ nodes in bipartite networks, `motif\_structure' and `motif\_participation' need to be run independently.
-				\item \textbf{stoufferIDs}: Determines whether to label motifs following~\citet{Stouffer2007} or based on the representation of the adjacency matrix of the motif as a binary integer, following the original \emph{mfinder}. If \textbf{stoufferIDs=True}, labels will be as in~\citet{Stouffer2007} when printing the pymfinder output. Defaults to \textbf{stoufferIDs=False}.
+				\item \textbf{stoufferIDs}: Determines whether to label motifs following~\citet{Stouffer2007} or based on the representation of the adjacency matrix of the motif as a binary integer, following the original \emph{mfinder} (see list\_motifs() and print\_motifs() to identify motifs based on motif ID). If \textbf{stoufferIDs=True}, labels will be as in~\citet{Stouffer2007} when printing the pymfinder output. Defaults to \textbf{stoufferIDs=False}.
 				\item \textbf{allmotifs}: If true, displays results for all possible motifs regardless of whether all have been observed. If false, displays only results for motifs observed in the network. Defaults to \textbf{allmotifs=False}.
 				\item \textbf{nrandomizations}: Number of random networks with which to compare the observed network. Defaults to 0 (no randomizations performed).
 				\item \textbf{randomize}: Determines whether or not to randomize the network before analyzing the participation and roles of the nodes and links in the network. If false, no randomization will be applied to the network. Defaults to \textbf{randomize=False}.
@@ -182,6 +182,10 @@ $^2$Department of Physics, Chemistry, and Biology (IFM), Link\"{o}ping Universit
 			\emph{motif\_participation} calculates the motif participation for each node (and each link, if \textbf{links=True}). All arguments passable to \emph{motif\_participation} are the same as those passed to \emph{pymfinder}. If \textbf{weighted=True}, the weight of all interactions forming each motif will also be considered (see the description in the article presenting the software). The characterization of the weight of a motif can be changed using the functional argument \textbf{fweight}. Such function \textbf{fweight} needs to take a Python list as input and return a value. The default \textbf{fweight} is the arithmetic mean.
 
 			\emph{motif\_roles} calculates the role of each node (and each link, if \textbf{links=True}). All arguments passable to \emph{motif\_roles} are the same as those passed to \emph{pymfinder}. Only defined for 2$\leq$motifsize$\leq$3 for unipartite networks and 2$\leq$motifsize$\leq$6 for bipartite networks. If \textbf{weighted=True}, the weight of all interactions forming each motif will also be considered (see the description in the article presenting the software). The characterization of the weight of a motif can be changed using the functional argument \textbf{fweight}. Such function \textbf{fweight} needs to take a Python list as input and return a value. The default \textbf{fweight} is the arithmetic mean.
+			
+			\emph{list\_motifs} returns all the motif IDs for a given motif size. The only arguments passable to \emph{list\_motifs} is the motif size \textbf{motifsize}.
+ 			
+ 			\emph{print\_motifs} print out all network motifs and motif IDs for any given motif size. The first arguments passed to \emph{list\_motifs} is the motif size \textbf{motifsize}. Other arguments passable to the function are \textbf{motifID} to print a specific motif, \textbf{outFile} to save the output in a file, and \textbf{links} to print the links forming each motif. We do not recommended using this function for \textbf{motifsize}$>$6.
 
 		\subsubsection{Output}
 			The object `results' returned by \emph{pymfinder} is a NetworkStats object containing dictionaries of motifs, nodes, and links. The value for each motif in the .motifs dictionary is an Motif object containing the motif profile for that motif. Similarly, the value for each node or link in the .nodes or .links dictionaries is a NodeLink object containing the motif participation or role of that node or link.
@@ -198,7 +202,7 @@ $^2$Department of Physics, Chemistry, and Biology (IFM), Link\"{o}ping Universit
 			f.close()
 			\end{lstlisting}
 
-			If \textbf{links=False}, the results include three tables. The first presents the motif profile of the network. Each row gives a motif ID, the count of that motif in the observed network, the mean and standard deviation of the count of that motif in the randomized networks, and the $Z$-score comparing the real network to the randomized networks. If \textbf{randomizations=False}, the random mean and standard deviations will be reported as 0.000 and the $Z$-score will be given as 888888.000.
+			If \textbf{links=False}, the results include three tables. The first presents the motif profile of the network. Each row gives a motif ID (see list\_motifs() and print\_motifs() to identify motifs based on ID), the count of that motif in the observed network, the mean and standard deviation of the count of that motif in the randomized networks, and the $Z$-score comparing the real network to the randomized networks. If \textbf{randomizations=False}, the random mean and standard deviations will be reported as 0.000 and the $Z$-score will be given as 888888.000.
 			
 			The second table presents the motif participation for each node in the network. Each row gives a node ID and the number of times the node appears in each motif. Motif ID's are given in the first row.
 			
